--- a/provisioning/playbooks/roles/desktop_host/tasks/debian.yml
+++ b/provisioning/playbooks/roles/desktop_host/tasks/debian.yml
@@ -1,3 +1,15 @@
 - name: Import role intent announcement tasks
   ansible.builtin.import_tasks: announce_role_intent.yml
 
+- name: Import tasks for installing essential packages
+  ansible.builtin.import_tasks: install_essential_packages.yml
+
+- name: Import tasks for installing Virtualbox
+  ansible.builtin.import_tasks: install_package_virtualbox.yml
+
+- name: Import tasks for creating directory hierarchy
+  ansible.builtin.import_tasks: create_directory_hierarchy.yml
+
+- name: Import tasks for deploying configuration
+  ansible.builtin.import_tasks: deploy_configuration.yml
+
