--- a/provisioning/playbooks/roles/desktop_host/tasks/main.yml
+++ b/provisioning/playbooks/roles/desktop_host/tasks/main.yml
@@ -1,3 +1,3 @@
 - name: Import Debian host desktop tasks
   import_tasks: debian.yml
-  when: {{ bringup_operating_system_name }} == 'linux_debian'
+  when: hosting_operating_system == 'linux_debian'
