Provide remaining essential packages

--- a/provisioning/playbooks/roles/desktop_host/tasks/install_essential_packages.yml
+++ b/provisioning/playbooks/roles/desktop_host/tasks/install_essential_packages.yml
@@ -24,8 +24,11 @@
   ansible.builtin.apt:
     pkg:
       - tmux
+      - vim
+      - gedit
       - keepassxc
       - rsync
+      - remmina
       - lsb-release
-      # TODO provide remaining essential packages
+      - fceux
   become: true
