--- a/provisioning/playbooks/roles/desktop_host/tasks/debian.yml
+++ b/provisioning/playbooks/roles/desktop_host/tasks/debian.yml
@@ -7,6 +7,12 @@
 - name: Import tasks for installing Virtualbox
   ansible.builtin.import_tasks: install_package_virtualbox.yml
 
+- name: Import tasks for installing Spotify
+  ansible.builtin.import_tasks: install_package_spotify.yml
+
+- name: Import tasks for installing Steam
+  ansible.builtin.import_tasks: install_package_steam.yml
+
 - name: Import tasks for creating directory hierarchy
   ansible.builtin.import_tasks: create_directory_hierarchy.yml
 
