--- a/provisioning/playbooks/roles/desktop_host/tasks/install_essential_packages.yml
+++ b/provisioning/playbooks/roles/desktop_host/tasks/install_essential_packages.yml
@@ -20,6 +20,7 @@
       - etckeeper
   become: true
 
+# TODO variate packages between guest and host provisioning
 - name: Install essential packages
   ansible.builtin.apt:
     pkg:
