--- a/provisioning/playbooks/roles/desktop_host/tasks/install_package_spotify.yml
+++ b/provisioning/playbooks/roles/desktop_host/tasks/install_package_spotify.yml
@@ -1,3 +1,5 @@
+# Install instructions can be found from: https://wiki.debian.org/spotify
+
 - name: Announce to be not yet implemented
   debug:
     msg: Spotify package installation is not yet implemented
