--- a/provisioning/playbooks/roles/desktop_host/tasks/install_package_steam.yml
+++ b/provisioning/playbooks/roles/desktop_host/tasks/install_package_steam.yml
@@ -1,3 +1,5 @@
+# Install instructions can be found from: https://wiki.debian.org/Steam
+
 - name: Announce to be not yet implemented
   debug:
     msg: Steam package installation is not yet implemented
