--- a/provisioning/playbooks/roles/provisioned_desktop_host/tasks/install_essential_packages.yml
+++ b/provisioning/playbooks/roles/provisioned_desktop_host/tasks/install_essential_packages.yml
@@ -34,4 +34,9 @@
       - fceux
       - ncdu
       - cowsay
+      - gnome-calculator
+      - mplayer
+      - gimp
+      - feh
+      - obs-studio
   become: true
