Add reminder on how to update Virtualbox install

--- a/provisioning/playbooks/roles/provisioned_desktop_host/tasks/install_package_virtualbox.yml
+++ b/provisioning/playbooks/roles/provisioned_desktop_host/tasks/install_package_virtualbox.yml
@@ -1,3 +1,6 @@
+# TODO update so that the package gets installed from:
+# https://www.virtualbox.org/wiki/Linux_Downloads
+
 - name: Insert backports apt source
   ansible.builtin.lineinfile:
     path: "{{ file_apt_source_backports }}"
