--- a/provisioning/playbooks/roles/provisioned_desktop_host/tasks/install_essential_packages.yml
+++ b/provisioning/playbooks/roles/provisioned_desktop_host/tasks/install_essential_packages.yml
@@ -14,6 +14,7 @@
     purge: true
   become: true
 
+# Also installs git as a dependency.
 - name: Install etckeeper
   ansible.builtin.apt:
     pkg:
