--- a/provisioning/playbooks/roles/provisioned_desktop_host/vars/main.yml
+++ b/provisioning/playbooks/roles/provisioned_desktop_host/vars/main.yml
@@ -4,3 +4,4 @@ file_spotify_public_key: pubkey_C85668DF69375001.gpg
 file_apt_source_spotify: /etc/apt/sources.list.d/spotify.list
 file_apt_source_backports: /etc/apt/sources.list.d/backports.list
 file_apt_source_fasttrack: /etc/apt/sources.list.d/fasttrack.list
+directory_config_repo: "{{ lookup('env','HOME') }}/my/repositories/github/pottumuusi/config"
