--- a/provisioning/playbooks/roles/provisioned_desktop_host/tasks/install_package_librewolf.yml
+++ b/provisioning/playbooks/roles/provisioned_desktop_host/tasks/install_package_librewolf.yml
@@ -1,3 +1,7 @@
+# sudo apt update && sudo apt install extrepo -y
+# sudo extrepo enable librewolf
+# sudo apt update && sudo apt install librewolf -y
+
 - name: Announce to be not yet implemented
   debug:
     msg: Librewolf install not yet implemented
